gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail19890a.d
version https://git-lfs.github.com/spec/v1
oid sha256:7d032405c1aa636f286d0b752cb2ef7386f4053ca2a99afbf8ece4d5014a0f9d
size 218
